--- a/force-app/main/default/classes/ExampleHttpImpl.cls
+++ b/force-app/main/default/classes/ExampleHttpImpl.cls
@@ -8,19 +8,13 @@ public with sharing class ExampleImplementationForExtObj {
 
         HttpResponse response = http.send(request);
 
-        if (response.getStatusCode() != 201) {
-            System.debug('The status code returned was not expected: ' +
-                response.getStatusCode() + ' ' + response.getStatus());
-        } else {
-            System.debug(response.getBody());
-        }
     }
 
     private static Http createHttpRequest() {
         Http http = new Http();
 
         HttpRequest request = new HttpRequest();
-        request.setEndpoint(ConnectionManager.manageConnection('google'));
+        request.setEndpoint(HttpConnectionManager.getMgdEndpoint('google'));
         request.setMethod('POST');
         request.setHeader('Content-Type', 'application/json;charset=UTF-8');
         request.setBody('{"name":"mighty moose"}');
