fixed deployment issues

--- a/force-app/main/default/classes/ExampleHttpImpl.cls
+++ b/force-app/main/default/classes/ExampleHttpImpl.cls
@@ -1,22 +1,21 @@
-public with sharing class ExampleImplementationForExtObj {
+public with sharing class ExampleHttpImpl {
 
     public static void ExampleImplementationForExtObj(Case caseObj) {
         
         CaseToGoogle__x casex = new CaseToGoogle__x();
         
-        Http http = createHttpRequest();
-
-        HttpResponse response = http.send(request);
-
+        Http httpRequest = createHttpRequest();
     }
 
     private static Http createHttpRequest() {
         Http http = new Http();
-
+ 
         HttpRequest request = new HttpRequest();
         request.setEndpoint(HttpConnectionManager.getMgdEndpoint('google'));
         request.setMethod('POST');
         request.setHeader('Content-Type', 'application/json;charset=UTF-8');
         request.setBody('{"name":"mighty moose"}');
+
+        return http;
     }
 }
